# old-locale

./: .gitignore  .travis.yml  README.md  changelog.md  old-locale.cabal
System/: Locale.hs
